--- a/04_date-time-space/02_time-series.Rmd
+++ b/04_date-time-space/02_time-series.Rmd
@@ -11,6 +11,8 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(message = FALSE)
+knitr::opts_chunk$set(warning = FALSE)
 library(tidyverse)
 library(lubridate)
 ```
