--- a/04_date-time-space/04_maps.Rmd
+++ b/04_date-time-space/04_maps.Rmd
@@ -283,8 +283,11 @@ acc2 = acc2 %>% mutate(fatal.rate = total.fatal / total.acc,
                        region = tolower(State))
 
 states1 = states %>% left_join(acc2, by = "region")
-states1 %>% ggplot(aes(x = long, y = lat)) + 
+
+map1 = states1 %>% ggplot(aes(x = long, y = lat)) + 
   geom_polygon(aes(group = group, fill = fatal.rate))
+
+map1 + scale_fill_gradient(low = "#FCECED", high = "#AE4540")
 ```
 
 ```{r, echo = FALSE, eval = FALSE}
